[package]
name = "simple-iavl"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/informalsystems/basecoin-rs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    An simple in memory iavl
"""

[dependencies]
bytes = { version = "1.1.0", default-features = false }
ics23 = { version = "0.8.0-alpha", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
tendermint = { git = "https://github.com/composableFi/tendermint-rs", branch = "seun-0.23.7", default-features = false }

[dev-dependencies]
proptest = "*"
rand = "*"

[features]
default = ['std']
std = [
    "bytes/std",
    "ics23/std",
    "sha2/std",
    "tendermint/std"
]
